style.css
@font-face {
    font-family: 'Roboto';
    src: url('Roboto-Italic.woff2') format('woff2'),
        url('Roboto-Italic.woff') format('woff');
    font-weight: normal;
    font-style: italic;
    font-display: swap;
}

@font-face {
    font-family: 'Roboto';
    src: url('Roboto-Regular.woff2') format('woff2'),
        url('Roboto-Regular.woff') format('woff');
    font-weight: normal;
    font-style: normal;
    font-display: swap;
}

:root {
  --magical-merlin: #0091d0;
  --white-frost: #e0e7ef;
  --solar-power: #f6b241;

  --sidebar-bottom-margin: 40px;
  --sidebar-left-margin: 10%;
}

.container {
  display: grid;
  grid-template-columns: 1fr 4fr;
  grid-template-rows: 1fr 5fr;
  grid-template-areas:
    "sidebar header"
    "sidebar content";
  height: 100vh;
  font-family: 'Roboto', sans-serif;
}

.header {
  grid-area: header;
  background-color: white;
}

.sidebar {
  grid-area: sidebar;
  background-color: var(--magical-merlin);
  color: white;
  display: flex;
  flex-direction: column;
}

.sidebar li {
  list-style-type: none;
}

.sidebar ul {
  padding: 0px;
}

.brand {
  margin-top: 20px;
  grid-auto-flow: column;
  font-size: xx-large;
  font-weight: bold;
  column-gap: 0.6em;
}

.logo {
  justify-self: end;
  display: grid;
  grid-template-rows: repeat(3, 0.4em);
  grid-template-columns: repeat(2, 0.6em);
  grid-template-areas:
    "logo-section-1 logo-section-2"
    "logo-section-1 logo-section-4"
    "logo-section-3 logo-section-4";
  gap: 2px;
}

.logo-section-1 {
  background-color: white;
  grid-area: logo-section-1;
}

.logo-section-2 {
  background-color: white;
  grid-area: logo-section-2;
}

.logo-section-3 {
  background-color: white;
  grid-area: logo-section-3;
}

.logo-section-4 {
  background-color: white;
  grid-area: logo-section-4;
}

.brand,
.primary-nav,
.secondary-nav {
  margin-left: var(--sidebar-left-margin);
  margin-bottom: var(--sidebar-bottom-margin);
  display: grid;
  grid-template-columns: 1em 1fr;
  align-items: center;
}

.primary-nav,
.secondary-nav {
  font-size: x-large;
  font-weight: bold;
  column-gap: 1em;
  row-gap: 0.5em;
}

.nav-icon {
  color: white;
}

.content {
  grid-area: content;
  background-color: var(--white-frost);
  display: grid;
  grid-template-rows: repeat(2, 1fr);
  grid-template-columns: 2fr 1fr;
  grid-template-areas:
    "projects announcements"
    "projects trending";
}

.projects {
  grid-area: projects;
}

.announcements {
  grid-area: announcements;
}

.trending {
  grid-area: trending;
}

